sumo/tests/sumo/extended/emitter/errors/vtypedist/negative_prob/errors.sumo
Error: MSTriggeredSource emitter: Attribute 'probability' for vehicle type 'KRAUSS_DEFAULT2' is negative (must not).
Quitting (on error).
